--- a/tutoring/core/templates/admin/daily_schedule_change_list.html
+++ b/tutoring/core/templates/admin/daily_schedule_change_list.html
@@ -1,4 +1,4 @@
-{% extends "admin/change_list.html" %}
+{% extends "core/admin/change_list.html" %}
 
 {% block content %}
 <h1>Daily Schedule for {{ today }}</h1>
