--- a/tutoring/core/templates/core/course_list.html
+++ b/tutoring/core/templates/core/course_list.html
@@ -12,6 +12,11 @@
     padding: 20px;
 }
 
+    h1, h5 {
+            font-family: 'Montserrat', sans-serif;
+            color: #2C2E83;
+font-weight: 500;
+      } 
 /* Page Title Styling */
 .page-title {
     font-size: 2rem;
