--- a/tutoring/core/templates/core/store.html
+++ b/tutoring/core/templates/core/store.html
@@ -4,7 +4,7 @@
 <div class="container mt-5">
     <div class="row mb-3 align-items-center">
         <div class="col-md-8">
-            <h1 class="text-primary">Our Exclusive Products</h1>
+            <h1 class="">Our Exclusive Products</h1>
         </div>
         <div class="col-md-4">
             <form method="get" action="{% url 'store' %}">
@@ -81,6 +81,11 @@
     body {
         background-color: #f8f9fa;
     }
+h1  {
+            font-family: 'Montserrat', sans-serif;
+            color: #2C2E83;
+font-weight: 500;
+      } 
     .product-card {
         border-radius: 15px;
         transition: transform 0.3s, box-shadow 0.3s;
