--- a/tutoring/core/templates/core/live_stream_detail.html
+++ b/tutoring/core/templates/core/live_stream_detail.html
@@ -3,8 +3,13 @@
 {% block title %}Live Stream Details{% endblock %}
 
 {% block content %}
+      <style> h1, h5 {
+            font-family: 'Montserrat', sans-serif;
+            color: #2C2E83;
+font-weight: 500;
+      } </style>
 <div class="container mt-5">
-    <h1 class="mb-4">{{ live_stream.title }}</h1>
+    <h1 class="mb-4 text-center">{{ live_stream.title }}</h1>
     <div class="card">
         <div class="card-body">
             <p><strong>Start Time:</strong> {{ live_stream.start_time }}</p>
