--- a/tutoring/core/templates/core/profile.html
+++ b/tutoring/core/templates/core/profile.html
@@ -1,10 +1,8 @@
-<!-- your_app/templates/core/profile.html -->
-
 {% extends 'core/base.html' %}
 
 {% block content %}
 <h2>Profile</h2>
-<p>Name: {{ student.name }}</p>
+
 <p>Email: {{ student.email }}</p>
 <p>Phone: {{ student.phone }}</p>
 
@@ -23,7 +21,7 @@
 {% if booked_hours %}
 <ul>
     {% for hour in booked_hours %}
-    <li>{{ hour.specific_date }} ({{ hour.day_of_week }}) - {{ hour.start_time }} to {{ hour.end_time }}</li>
+    <li>{{ hour.specific_date }} - {{ hour.start_time|date:"H:i" }} to {{ hour.end_time|date:"H:i" }}</li>
     {% endfor %}
 </ul>
 {% else %}
@@ -34,7 +32,7 @@
 {% if purchased_products %}
 <ul>
     {% for product in purchased_products %}
-    <li>{{ product.name }} - {{ product.price }}</li>
+    <li>{{ product.name }} - £{{ product.price }}</li>
     {% endfor %}
 </ul>
 {% else %}
