--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -126,6 +126,16 @@
                             <a class="nav-link" href="{% url 'course_session_list' %}">Course Sessions</a>
                         </li>
                     {% endif %}
+{% if user.is_authenticated %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cart_detail' %}">Cart</a>
+                    </li>
+{% endif %}
+
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'group_session_list' %}">Group Sessions</a>
                     </li>
