--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -8,8 +8,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Expert tutoring across North Wales in Mathematics, Sciences, and more. Serving areas like Llandudno, Wrexham, and Bangor with professional in-person and online tutoring services.">
-    <title>Expert Tutoring Services in North Wales | Courses in Maths, Science, and More</title>
+  
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
@@ -136,14 +135,9 @@
                     </li>
 {% endif %}
 
+               
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'group_session_list' %}">Group Sessions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'live_stream_list' %}">Live Streams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'available_hours_list' %}">Available Hours</a>
+                        <a class="nav-link" href="{% url 'available_hours_list' %}">Availability</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'reviews' %}">Reviews</a>
