--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -172,26 +172,48 @@
     <footer class="footer-custom mt-auto py-4 text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4 ">
                     <h5>Age Range</h5>
                     <ul class="list-unstyled">
+<div class="row">
+<div class="col-12">
                         <li>Key Stage 1: 5-7 years</li>
+</div>
+<div class="col-12">
                         <li>Key Stage 2: 7-11 years</li>
+</div>
+<div class="col-12">
                         <li>Key Stage 3: 11-14 years</li>
+</div>
+<div class="col-12">
                         <li>GCSE: 14-16 years</li>
+</div>
+<div class="col-12">
                         <li>A-Level: 16-18 years</li>
+</div>
+</div>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <h5>Subjects</h5>
                     <ul class="list-unstyled">
+<div class="row">
+<div class="col-12">
                         <li>Mathematics</li>
+</div>
+<div class="col-12">
                         <li>Chemistry</li>
+</div>
+<div class="col-12">
                         <li>Physics</li>
+</div>
+<div class="col-12">
                         <li>Further Mathematics</li>
+</div>
+</div>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-12 col-lg-4 py-3 py-lg-0">
                     <h5>Examination Boards</h5>
                     <ul class="list-unstyled">
                         <li>AQA</li>
