--- a/tutoring/core/templates/core/home.html
+++ b/tutoring/core/templates/core/home.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="North Wales tutoring, education, Maths tutoring, Science tutoring, GCSE preparation, A-Level preparation">
 <link rel="canonical" href="https://www.northwalestutoring.com/">
 <meta property="og:title" content="North Wales Tutoring - Premier Education Services">
-<meta property="og:description" content="Empowering Students Across North Wales with personalized tutoring in Maths, Science, and more.">
+<meta property="og:description" content="Empowering Students Across North Wales with personalised tutoring in Maths, Science, and more.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.northwalestutoring.com/">
 <meta property="og:image" content="{% static 'images/brand-logo.jpg' %}">
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <section id="hero" class="text-center">
-    <h1 class="hero-header">Empowering Students Across North Wales</h1>
+    <h1 class="hero-header"> North Wales Tuturing </h1>
     <div class="text-hero-background py-2 border rounded">
         <p class="lead text-dark my-2">Achieve academic excellence with personalised tutoring in Maths, Science, and more. Serving Gwynedd, Conwy, Denbighshire, and beyond.</p>
     </div>
@@ -197,7 +197,8 @@ h1, h2, h3 {
     border-bottom: 1px solid #dde0e3;
     margin-bottom: 20px;
 }
-.hero-header {color:#673ab7;}
+.hero-header {color:white;
+ text-shadow: 0 4px 6px rgba(103, 58, 183,0.1);}
 
 /* Image Styling */
 .mathematics-image {
