--- a/tutoring/core/templates/core/base.html
+++ b/tutoring/core/templates/core/base.html
@@ -168,7 +168,78 @@
     </nav>
     <div class="container my-5" style="padding-top: 80px;">
         {% block content %}{% endblock %}
+<!-- Privacy Policy Modal -->
+<div class="modal" id="privacyPolicyModal" tabindex="-1" aria-labelledby="privacyPolicyModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="privacyPolicyModalLabel">Privacy Policy</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Your privacy is important to us. It is our policy to respect your privacy regarding any information we may collect from you across our website, and other sites we own and operate.</p>
+                <p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
+                <p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.</p>
+                <p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
+                <p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.</p>
+                <p>You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.</p>
+                <p>Your continued use of our site will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
+                <p>This policy is effective as of 05/09/2024.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
+</div>
+
+<!-- Terms of Conditions Modal -->
+<div class="modal" id="termsConditionsModal" tabindex="-1" aria-labelledby="termsConditionsModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="termsConditionsModalLabel">Terms and Conditions</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Welcome to North Wales Tutoring!</p>
+                <p>These terms and conditions outline the rules and regulations for the use of North Wales Tutoring's Website.</p>
+                <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use North Wales Tutoring if you do not agree to take all of the terms and conditions stated on this page.</p>
+                <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice, and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves.</p>
+                <p>All terms refer to the offer, acceptance, and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</p>
+                <h6>Cookies</h6>
+                <p>We employ the use of cookies. By accessing North Wales Tutoring, you agreed to use cookies in agreement with the [Company Name]'s Privacy Policy.</p>
+                <h6>License</h6>
+                <p>Unless otherwise stated, [Company Name] and/or its licensors own the intellectual property rights for all material on North Wales Tutoring. All intellectual property rights are reserved. You may access this from North Wales Tutoring for your own personal use subjected to restrictions set in these terms and conditions.</p>
+                <p>You must not:</p>
+                <ul>
+                    <li>Republish material from North Wales Tutoring</li>
+                    <li>Sell, rent or sub-license material from North Wales Tutoring</li>
+                    <li>Reproduce, duplicate or copy material from North Wales Tutoring</li>
+                    <li>Redistribute content from North Wales Tutoring</li>
+                </ul>
+                <h6>Hyperlinking to our Content</h6>
+                <p>The following organizations may link to our Website without prior written approval:</p>
+                <ul>
+                    <li>Government agencies;</li>
+                    <li>Search engines;</li>
+   <li>News organizations;</li>
+                    <li>Online directory distributors may link to our Website in the same manner as they hyperlink to the Websites of other listed businesses; and</li>
+                    <li>Systemwide Accredited Businesses except soliciting non-profit organizations, charity shopping malls, and charity fundraising groups which may not hyperlink to our Web site.</li>
+                </ul>
+  <p>These organizations may link to our home page, to publications or to other Website information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products and/or services; and (c) fits within the context of the linking party’s site.</p>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
+
     <footer class="footer-custom mt-auto py-4 text-center">
         <div class="container">
             <div class="row">
@@ -223,18 +294,24 @@
                         <li>CCEA</li>
                     </ul>
                 </div>
-    <a href="https://www.northwalestutoring.com/privacy-policy">Privacy Policy</a>
-    <a href="https://www.northwalestutoring.com/terms-of-service">Terms of Service</a>
+<div class="col-12">
+<!-- Trigger for Privacy Policy Modal -->
+<a href="#" data-toggle="modal" data-target="#privacyPolicyModal">Privacy Policy</a>
+
+<!-- Trigger for Terms of Conditions Modal -->
+<a href="#" data-toggle="modal" data-target="#termsConditionsModal">Terms of Service</a>
             </div>
             <div class="text-center mt-3">
 <a href="https://cleandesignuk.com/" target="_blank" class="btn btn-custom">Website by Clean Design UK</a>
 <p class="py-4">&copy; 2024 Tutoring Services. All Rights Reserved.</p>
-               
-                <img src="{% static 'images/logo.png' %}" alt="North Wales Tutoring" height="30">
-            </div>
+               </div>
+   
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap JS and its dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
